fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,23 +60,8 @@ body {
 
 html {
   box-sizing: border-box;
-  scrollbar-color: theme("colors.slate.600") theme("colors.slate.900");
+  scrollbar-color: theme("colors.slate.300") transparent;
   scrollbar-width: thin;
-}
-
-html::-webkit-scrollbar {
-  width: max(0.8vw, 8px);
-}
-
-html::-webkit-scrollbar-thumb {
-  background-color: theme("colors.slate.600");
-  border: max(0.4vw, 4px) solid transparent;
-  border-radius: 8px;
-  background-clip: padding-box;
-}
-
-html::-webkit-scrollbar-track {
-  background-color: theme("colors.slate.900");
 }
 
 body h1 {
